[gd_scene load_steps=9 format=2]

[ext_resource path="res://gfx/room/room2/Room_2_Graphic_v2.png" type="Texture" id=1]
[ext_resource path="res://core/doodad/wall_door/wall_door.tscn" type="PackedScene" id=2]
[ext_resource path="res://core/doodad/bg_door/bg_door.tscn" type="PackedScene" id=3]
[ext_resource path="res://core/camera/room_camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://core/doodad/axe/axe.tscn" type="PackedScene" id=5]
[ext_resource path="res://core/doodad/capsule/capsule.tscn" type="PackedScene" id=6]
[ext_resource path="res://core/room/link_room.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 84 )

[node name="LinkRoom" type="Node"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 640.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BridgeDoor" parent="." instance=ExtResource( 2 )]
position = Vector2( 104, 380 )
is_unlocked = false
is_axe_door = true
is_cabin_door = false
destination_room = "BridgeRoom"
from_room = "LinkRoom"

[node name="RipDoor" parent="." instance=ExtResource( 2 )]
position = Vector2( 860, 380 )
is_unlocked = true
is_axe_door = false
is_cabin_door = false
destination_room = "RipDriveRoom"
from_room = "LinkRoom"

[node name="Room" type="Sprite" parent="."]
position = Vector2( 480, 292 )
texture = ExtResource( 1 )

[node name="ReactorDoor" parent="." instance=ExtResource( 3 )]
position = Vector2( 232, 372 )

[node name="Axe" parent="." instance=ExtResource( 5 )]
position = Vector2( 748, 396 )

[node name="Capsule1" parent="." instance=ExtResource( 6 )]
position = Vector2( 368, 348 )
human_name = "jonie hoff"
journal_entry = "jonie hoff journal"

[node name="Capsule2" parent="." instance=ExtResource( 6 )]
position = Vector2( 464, 348 )
human_name = "whetu ng"
journal_entry = "whetu ng journal"

[node name="Capsule3" parent="." instance=ExtResource( 6 )]
position = Vector2( 560, 348 )
human_name = "steve lowry"
journal_entry = "steve lowry journal"

[node name="Capsule4" parent="." instance=ExtResource( 6 )]
position = Vector2( 656, 348 )
human_name = "anfelice gray"
journal_entry = "anfelice gray journal"

[node name="Boundary" type="StaticBody2D" parent="."]

[node name="LeftWall" type="CollisionShape2D" parent="Boundary"]
position = Vector2( 132, 380 )
shape = SubResource( 1 )

[node name="RightWall" type="CollisionShape2D" parent="Boundary"]
position = Vector2( 828, 380 )
shape = SubResource( 1 )

[node name="Camera" parent="." instance=ExtResource( 4 )]
visible = false
